--- a/Franquisia1.1/Views/UndAtencion/Index.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Index.cshtml
@@ -51,6 +51,27 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="modal-ingresar">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Ingresar</h4>
+            </div>
+            <div class="modal-body">
+                <div class="panel">
+                    Ingrese clave:
+                    <div class="input-group input-group-sm">
+                        <input type="password" id="perate-pass-2" data-valant="" placeholder="Ingrese clave" class="form-control input-lg" />
+                        <span class="input-group-btn">
+                            <button id="btn-ingresar-2" class="btn btn-xs"><span class="glyphicon glyphicon-ok"></span></button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 @section Scripts{
     @Scripts.Render("~/bundles/aplicacion")
     @Scripts.Render("~/bundles/app")
