--- a/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
@@ -38,6 +38,7 @@
                     <div class="col-xs-6">Total:<label id="tabla-factura-total">-</label></div>
                 </div>
                 <div class="btn-group btn-group-sm btn-group-justified">
+                    <a class="btn btn-sm btn-danger" href="/UndAtencion/Index">Regresar</a>
                     <a id="factura-pre-factura" class="btn btn-default"><i class="glyphicon glyphicon-print"></i></a>
                 </div>
             </div>
@@ -155,7 +156,11 @@
         </div>
     </div>
 </div>
-
+<div class="hide">
+    <label id="divate">@ViewBag.div</label>
+    <label id="undate">@ViewBag.und</label>
+    <label id="perate">@ViewBag.per</label>
+</div>
 @section Scripts{
     @Scripts.Render("~/bundles/aplicacion")
     @Scripts.Render("~/bundles/app")
