--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         Division:
-                        <select id="divatencion" class="col-sm-6 form-control input-sm">
+                        <select id="divatencion" class="col-sm-6 form-control input-sm" value="@ViewBag.div">
                             @if (ViewBag.divisiones.Count == 0){<option value="">Sin Elementos</option>}
                             @foreach (var div in ViewBag.divisiones){<option value="@div.CODIGO">@div.DESCRIPCION</option>}
                         </select>
@@ -14,7 +14,7 @@
                     <div class="col-sm-6">
                         Nº Und. de Atención:
                         <div class="input-group input-group-sm">
-                            <input type="text" id="undatencion" data-valant="" placeholder="Ingrese Nº de Unidad de Atención" class="form-control input-sm" />
+                            <input type="text" id="undatencion" data-valant="" placeholder="Ingrese Nº de Unidad de Atención" class="form-control input-sm" value="@ViewBag.und" />
                             <span class="input-group-btn">
                                 <button id="btn-update" class="btn btn-xs"><span class="glyphicon glyphicon-refresh"></span></button>
                             </span>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="btn-group btn-group-xs btn-group-vertical ">
                         <a id="cambiar-undatencion" class="btn btn-secundario btn-secundario-bordes">Cambiar Und. Atención</a>
-                        <a href="/UndAtencion/Consumos" class="btn btn-secundario btn-secundario-bordes">M. Consumos</a>
+                        <a href="/UndAtencion/Consumos?div=@ViewBag.div&und=@ViewBag.und&per=@ViewBag.per" class="btn btn-secundario btn-secundario-bordes">M. Consumos</a>
                     </div>
                     <a class="btn btn-danger" href="/Home/OffLogin">Salir </a>
                 </div>
@@ -332,4 +332,8 @@
     @Scripts.Render("~/bundles/aplicacion")
     @Scripts.Render("~/bundles/app")
     @Scripts.Render("~/bundles/fact")
+    <script>
+        $("#divatencion").val(@ViewBag.div);
+    </script>
+
 }
