--- a/Franquisia1.1/Views/UndAtencion/Index.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Index.cshtml
@@ -23,7 +23,7 @@
 </div>
 <div class="hide">
     <label id="und-sel"></label><label id="per-sel"></label><label id="div-sel"></label>
-    <label id="parpwd">S</label> <label id="rol">@Session["Loged_usrfile_rol"]</label>
+    <label id="parpwd">@ViewBag.parpwd</label> <label id="rol">@Session["Loged_usrfile_rol"]</label>
 </div>
 
 <div class="modal fade" id="modal-seleccionar-peratencion">
