--- a/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
@@ -38,7 +38,7 @@
                     <div class="col-xs-6">Total:<label id="tabla-factura-total">-</label></div>
                 </div>
                 <div class="btn-group btn-group-sm btn-group-justified">
-                    <a class="btn btn-sm btn-danger" href="/UndAtencion/Index">Regresar</a>
+                    <a class="btn btn-sm btn-warning" href="/UndAtencion/Index">Regresar</a>
                     <a id="factura-pre-factura" class="btn btn-default"><i class="glyphicon glyphicon-print"></i></a>
                 </div>
             </div>
