--- a/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Consumos.cshtml
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         Division:
-                        <select id="divatencion" class="col-sm-6 form-control input-sm">
+                        <select id="divatencion" class="col-sm-6 form-control input-sm" disabled>
                             @if (ViewBag.divisiones.Count == 0){<option value="">Sin Elementos</option>}
                             @foreach (var div in ViewBag.divisiones){<option value="@div.CODIGO">@div.DESCRIPCION</option>}
                         </select>
@@ -14,9 +14,9 @@
                     <div class="col-sm-6">
                         Nº Und. de Atención:
                         <div class="input-group input-group-sm">
-                            <input type="text" id="undatencion" data-valant="" placeholder="Ingrese Nº de Unidad de Atención" class="form-control input-sm" value="@ViewBag.und" />
+                            <input id="undatencion" type="number" maxlength="3" data-valant="" class="form-control input-sm" value="@ViewBag.und" disabled/>
                             <span class="input-group-btn">
-                                <button id="btn-update" class="btn btn-xs"><span class="glyphicon glyphicon-refresh"></span></button>
+                                <button id="btn-update" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-refresh"></span></button>
                             </span>
                         </div>
                     </div>
