--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -14,9 +14,9 @@
                     <div class="col-sm-6">
                         Nº Und. de Atención:
                         <div class="input-group input-group-sm">
-                            <input type="text" id="undatencion" data-valant="" placeholder="Ingrese Nº de Unidad de Atención" class="form-control input-sm" value="@ViewBag.und" />
+                            <input id="undatencion" type="number" maxlength="3" data-valant="" class="form-control input-sm" value="@ViewBag.und" disabled />
                             <span class="input-group-btn">
-                                <button id="btn-update" class="btn btn-xs"><span class="glyphicon glyphicon-refresh"></span></button>
+                                <button id="btn-update" class="btn btn-xs btn-success"><span class="glyphicon glyphicon-refresh"></span></button>
                             </span>
                         </div>
                     </div>
