--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -232,7 +232,8 @@
                     <table id="tabla-seleccionar-anexo" class='table table-hover'>
                         <thead>
                             <tr>
-                                <th>Razón Social/Apellido</th>
+                                <th>Descripción</th>
+                                <th>Tipo</th>
                                 <th>RUC/DNI</th>
                                 <th>Dirección</th>
                             </tr>
@@ -293,7 +294,7 @@
                             <div class="row">
                                 <div class="col-sm-5">
                                     <label>DNI:</label>
-                                    <input type="number" id="form-actdni-nrodoc" class="form-control" placeholder="Ingrese DNI" required />
+                                    <input type="number" id="form-actdni-nrodoc" class="form-control" placeholder="Ingrese DNI" readonly />
                                 </div>
                             </div>
                         </div>
@@ -335,7 +336,7 @@
                             <div class="row">
                                 <div class="col-sm-5">
                                     <label>RUC:</label>
-                                    <input type="number" id="form-actruc-nrodoc" class="form-control" placeholder="Ingrese DNI" required />
+                                    <input type="number" id="form-actruc-nrodoc" class="form-control" placeholder="Ingrese DNI" disabled />
                                 </div>
                             </div>
                         </div>
