--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -26,7 +26,7 @@
                     @foreach (var tipdoc in ViewBag.tipdocs)
                     {
                         <div class="btn btn-default">
-                            <input type="radio" name="tipo-documentos" value="@tipdoc.clave" class="hide" />@tipdoc.descripcion
+                            <input type="radio" name="tipo-documentos" value="@tipdoc.clave" class="hide" data-desc="@tipdoc.descripcion" />@tipdoc.descripcion
                         </div>
                     }
                 </div>
@@ -169,6 +169,17 @@
                 <div class="panel panel-body" style="padding-top:0px;">
                     <label>Total a pagar: S/. </label> <label id="form-pagar-total"></label>
                     <div class="row">
+                        <table id="tabla-forma-pago" class="table table-striped table-bordered table-condensed small">
+                            <thead>
+                                <tr><th>Forma de pago</th><th>Tipo tarjeta</th><th>Número de referencia</th><th>Importe</th></tr>
+                            </thead>
+                            <tbody></tbody>
+                            <tfoot>
+                                <tr><td class="text-right" colspan="3"><label>Importe pagado</label></td><td><label id="forma-pago-total">0.00</label></td></tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                    <div class="row">
                         <div id="modal-pagar-naturaleza" class="btn-group btn-group-xs btn-group-justified form-group">
                             @foreach (var fv in ViewBag.forventa)
                             {
@@ -179,17 +190,6 @@
                         </div>
                     </div>
                     <div id="naturaleza-c">
-                        <div class="row">
-                            <table id="tabla-forma-pago" class="table table-striped table-bordered table-condensed small">
-                                <thead>
-                                    <tr><th>Forma de pago</th><th>Tipo tarjeta</th><th>Número de referencia</th><th>Importe</th></tr>
-                                </thead>
-                                <tbody></tbody>
-                                <tfoot>
-                                    <tr><td class="text-right" colspan="3"><label>Total</label></td><td><label id="forma-pago-total">0.00</label></td></tr>
-                                </tfoot>
-                            </table>
-                        </div>
                         <div class="row">
                             <ul id="tabs-forma-pago" class="nav nav-tabs">
                                 @foreach (var fp in ViewBag.forpago)
@@ -214,7 +214,7 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="modal-seleccionar-anexo" data-anexo="#tabla-factura-anexo" data-padre="#">
+<div class="modal" id="modal-seleccionar-anexo" data-anexo="#tabla-factura-anexo" data-padre="#">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -222,7 +222,7 @@
             </div>
             <div class="modal-body">
                 <div class="panel">
-                    <div class="form-group"><input id="txtBuscar" type="text" class="form-control " placeholder="Buscar" /></div>
+                    <div class="form-group"><input id="txtBuscar" type="text" class="form-control " placeholder="Buscar" autofocus autocomplete="on"/></div>
                     <div class="btn-group btn-group-justified">
                         <a id="btn-buscar-razon" class="btn btn-warning">Por Razón Social/Apellido y Nombres</a>
                         <a id="btn-buscar-ruc" class="btn btn-info">Por RUC/ DNI</a>
@@ -234,7 +234,7 @@
                             <tr>
                                 <th>Descripción</th>
                                 <th>Tipo</th>
-                                <th>RUC/DNI</th>
+                                <th>Número</th>
                                 <th>Dirección</th>
                             </tr>
                         </thead>
