fronted del formulario de pago completado

--- a/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
+++ b/Franquisia1.1/Views/UndAtencion/Facturacion.cshtml
@@ -171,11 +171,11 @@
                     <div class="row">
                         <table id="tabla-forma-pago" class="table table-striped table-bordered table-condensed small">
                             <thead>
-                                <tr><th>Forma de pago</th><th>Tipo tarjeta</th><th>Número de referencia</th><th>Importe</th></tr>
+                                <tr><th>Forma de venta</th><th>Forma de pago</th><th>Tipo tarjeta</th><th>Nro. de referencia</th><th>Importe</th></tr>
                             </thead>
                             <tbody></tbody>
                             <tfoot>
-                                <tr><td class="text-right" colspan="3"><label>Importe pagado</label></td><td><label id="forma-pago-total">0.00</label></td></tr>
+                                <tr><td class="text-right" colspan="4"><label>Importe pagado</label></td><td><label id="forma-pago-total">0.00</label></td></tr>
                             </tfoot>
                         </table>
                     </div>
@@ -212,7 +212,7 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label>Importe: </label>
-                                    <input type="text" id="input-importe" class="form-control-static text-right"/>
+                                    <input type="text" id="input-importe" class="form-control-static"/>
                                 </div>
                                 <div id="modal-pagar-principal">
 
